--- a/textimager-uima-util/pom.xml
+++ b/textimager-uima-util/pom.xml
@@ -13,5 +13,10 @@
 			<artifactId>textimager-uima-types</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.zeroturnaround</groupId>
+			<artifactId>zt-exec</artifactId>
+			<version>1.11</version>
+		</dependency>
 	</dependencies>
 </project>
