Fixed deep-eos submodule

--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
-<!-- 		<module>textimager-uima-deep-eos</module> -->
+		<module>textimager-uima-deep-eos</module>
 		<module>textimager-uima-similarity</module>
 		
 		<module>textimager-uima-database</module>
