--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "textimager-uima-agreement"]
 	path = textimager-uima-agreement
 	url = https://github.com/texttechnologylab/UIMA-Agreement.git
+[submodule "textimager-uima-deep-eos"]
+	path = textimager-uima-deep-eos
+	url = https://github.com/texttechnologylab/deep-eos-uima.git
