--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,6 @@
 		<module>textimager-uima-util</module>
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
+		<module>textimager-uima-flair</module>
 	</modules>
 </project>
