TextBlob sentiment annotator

--- a/pom.xml
+++ b/pom.xml
@@ -110,5 +110,6 @@
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
 		<module>textimager-uima-flair</module>
+		<module>textimager-uima-textblob</module>
 	</modules>
 </project>
