--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -128,6 +128,10 @@
 				</dependency>
 				<dependency>
 					<groupId>org.dkpro.core</groupId>
+					<artifactId>dkpro-core-stanfordnlp-gpl</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.dkpro.core</groupId>
 					<artifactId>dkpro-core-matetools-gpl</artifactId>
 				</dependency>
 				<dependency>
