--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
+        <module>textimager-uima-gazetteer</module>
 		<module>textimager-uima-deep-eos</module>
 		<module>textimager-uima-similarity</module>
 		
