--- a/textimager-uima-tool-test/pom.xml
+++ b/textimager-uima-tool-test/pom.xml
@@ -60,6 +60,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-tokit-asl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-languagetool-asl</artifactId>
 		</dependency>
 		<dependency>
