--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -104,6 +104,11 @@
 				</dependency>
 				<dependency>
 					<groupId>org.hucompute.textimager.uima</groupId>
+					<artifactId>textimager-uima-stanza</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.hucompute.textimager.uima</groupId>
 					<artifactId>textimager-uima-textblob</artifactId>
 					<version>${project.version}</version>
 				</dependency>
