--- a/textimager-uima-disambiguation/pom.xml
+++ b/textimager-uima-disambiguation/pom.xml
@@ -40,5 +40,12 @@
 			<artifactId>jgrapht-io</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
+
 	</dependencies>
 </project>
