--- a/textimager-uima-io/pom.xml
+++ b/textimager-uima-io/pom.xml
@@ -7,6 +7,13 @@
 		<version>0.3.0</version>
 	</parent>
 	<artifactId>textimager-uima-io</artifactId>
+	
+	<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<!-- <dependency> -->
@@ -59,6 +66,11 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.10.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.abahgat</groupId>
+		    <artifactId>suffixtree</artifactId>
+		    <version>ef82c837f6</version>
 		</dependency>
 	</dependencies>
 </project>
