--- a/textimager-uima-tool-test/pom.xml
+++ b/textimager-uima-tool-test/pom.xml
@@ -20,7 +20,13 @@
 	</repositories>
 
 	<dependencies>
-	<dependency>
+
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-tagme</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-io</artifactId>
 			<version>${project.version}</version>
@@ -38,6 +44,16 @@
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-stanza</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-fasttext</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-textblob</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -71,26 +87,41 @@
 			<artifactId>dkpro-core-matetools-gpl</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-udpipe-asl -->
-<dependency>
-    <groupId>org.dkpro.core</groupId>
-    <artifactId>dkpro-core-udpipe-asl</artifactId>
-    <version>2.1.0</version>
-</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-udpipe-asl</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
-<!--       <dependency>
-        <groupId>org.dkpro.core</groupId>
-        <artifactId>dkpro-core-udpipe-model-segmenter-en-ud</artifactId>
-        <version>20160523.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.dkpro.core</groupId>
-        <artifactId>dkpro-core-udpipe-model-tagger-en-ud</artifactId>
-        <version>20160523.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.dkpro.core</groupId>
-        <artifactId>dkpro-core-udpipe-model-parser-en-ud</artifactId>
-        <version>20160523.1</version>
-      </dependency> -->
+		<!-- <dependency> <groupId>org.dkpro.core</groupId> <artifactId>dkpro-core-udpipe-model-segmenter-en-ud</artifactId> 
+			<version>20160523.1</version> </dependency> <dependency> <groupId>org.dkpro.core</groupId> 
+			<artifactId>dkpro-core-udpipe-model-tagger-en-ud</artifactId> <version>20160523.1</version> 
+			</dependency> <dependency> <groupId>org.dkpro.core</groupId> <artifactId>dkpro-core-udpipe-model-parser-en-ud</artifactId> 
+			<version>20160523.1</version> </dependency> -->
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-HUComputeNER</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-heideltime</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-wiki</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-biofid-gazetteer</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-flair-ner</artifactId>
+			<version>0.3.0</version>
+		</dependency>
 	</dependencies>
 </project>
