Add dependency textimager-uima-types

--- a/textimager-uima-allennlp/pom.xml
+++ b/textimager-uima-allennlp/pom.xml
@@ -18,5 +18,10 @@
 			<artifactId>textimager-uima-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-types</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
