POM fixes and passing gnet as argument to uima

--- a/pom.xml
+++ b/pom.xml
@@ -100,16 +100,16 @@
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
-		<module>textimager-uima-deep-eos</module>
+<!-- 		<module>textimager-uima-deep-eos</module> -->
 		<module>textimager-uima-similarity</module>
 		
 		<module>textimager-uima-database</module>
 		<module>textimager-uima-io-mediawiki</module>
-		<module>textimager-uima-tool-test</module>
+<!-- 		<module>textimager-uima-tool-test</module> -->
 		<module>textimager-uima-util</module>
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
- 		<module>textimager-uima-flair-ner</module>
+<!--  		<module>textimager-uima-flair-ner</module> -->
 		<module>textimager-uima-textblob</module>
 	</modules>
 </project>
