--- a/pom.xml
+++ b/pom.xml
@@ -102,9 +102,8 @@
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
-		<module>textimager-uima-deep-eos</module>
+<!-- 		<module>textimager-uima-deep-eos</module> -->
 		<module>textimager-uima-similarity</module>
-		
 		<module>textimager-uima-database</module>
 		<module>textimager-uima-io-mediawiki</module>
 		<module>textimager-uima-util</module>
