--- a/textimager-uima-flair-ner/pom.xml
+++ b/textimager-uima-flair-ner/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.github.texttechnologylab</groupId>
 			<artifactId>UIMATypeSystem</artifactId>
-			<version>1.8.2</version>
+			<version>${ttlab.typesystem.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
