added DocumentModification annotation to base reader

--- a/textimager-uima-io/pom.xml
+++ b/textimager-uima-io/pom.xml
@@ -67,5 +67,10 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.10.2</version>
 		</dependency>
+        <dependency>
+            <groupId>com.github.texttechnologylab</groupId>
+            <artifactId>UIMATypeSystem</artifactId>
+            <version>${ttlab.typesystem.version}</version>
+        </dependency>
 	</dependencies>
 </project>
