Small BIOfid edits

--- a/textimager-uima-io-abbyy/pom.xml
+++ b/textimager-uima-io-abbyy/pom.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>textimager-uima</artifactId>
-        <groupId>org.hucompute.textimager.uima</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.hucompute.textimager.uima</groupId>
+        <artifactId>textimager-uima</artifactId>
+        <version>0.3.0</version>
+    </parent>
 
     <artifactId>textimager-uima-io-abbyy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -87,11 +86,16 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.hucompute.textimager.uima</groupId>
-            <artifactId>deep-eos-uima</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-io-xmi-asl</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.hucompute.textimager.uima</groupId>-->
+        <!--            <artifactId>deep-eos-uima</artifactId>-->
+        <!--            <version>1.2.1</version>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
@@ -198,7 +202,7 @@
         <repository>
             <id>central</id>
             <name>Maven Plugin Repository</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
             <snapshots>
