--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -111,6 +111,11 @@
 				</dependency>
 				<dependency>
 					<groupId>org.hucompute.textimager.uima</groupId>
+					<artifactId>textimager-uima-biofid-flair</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.hucompute.textimager.uima</groupId>
 					<artifactId>textimager-uima-stanza</artifactId>
 					<version>${project.version}</version>
 				</dependency>
