Added Bert support to TextImager.

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,8 @@
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
 <!-- 		<module>textimager-uima-allennlp</module> -->
-<!--  		<module>textimager-uima-flair-ner</module> -->
+		<module>textimager-uima-flair-ner</module>
+		<module>textimager-uima-text2scene</module>
 		<module>textimager-uima-textblob</module>
 <!-- 		<module>textimager-uima-transformers</module> -->
 		<module>textimager-uima-w2v</module>
