--- a/textimager-uima-text2scene/pom.xml
+++ b/textimager-uima-text2scene/pom.xml
@@ -34,5 +34,22 @@
             <artifactId>dkpro-core-stanfordnlp-gpl</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+            <artifactId>de.tudarmstadt.ukp.dkpro.core.corenlp-gpl</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
