--- a/praktikum-ss20-disambiguation/pom.xml
+++ b/praktikum-ss20-disambiguation/pom.xml
@@ -31,13 +31,13 @@
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-base-annotators</artifactId>
-            <version>0.3.0</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.dkpro.core</groupId>
             <artifactId>dkpro-core-stanfordnlp-gpl</artifactId>
-            <version>1.12.0</version>
+            <version>${dkpro.core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-uaic</artifactId>
-            <version>0.3.0</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
