--- a/textimager-uima-NeuralnetworkNER/pom.xml
+++ b/textimager-uima-NeuralnetworkNER/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-base-annotators</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
