--- a/textimager-uima-flair-ner/pom.xml
+++ b/textimager-uima-flair-ner/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-deep-eos</artifactId>
-			<version>1.2.1</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
