--- a/textimager-uima-io-abbyy/pom.xml
+++ b/textimager-uima-io-abbyy/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-types</artifactId>
-            <version>0.3.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.uima</groupId>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-heideltime</artifactId>
-            <version>0.3.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.texttechnologylab</groupId>
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-heideltime</artifactId>
-            <version>0.3.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
