--- a/textimager-uima-tool-test/pom.xml
+++ b/textimager-uima-tool-test/pom.xml
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-biofid-gazetteer</artifactId>
-			<version>0.3.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		
 		<!-- <dependency>
