--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 		<module>textimager-uima-heideltime</module>
 <!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
- 		<module>textimager-uima-deep-eos</module>
+<!-- 		<module>textimager-uima-deep-eos</module>-->
 		<module>textimager-uima-similarity</module>
 		<module>textimager-uima-database</module>
 		<module>textimager-uima-io-mediawiki</module>
