add some base annotators

--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,6 @@
 <!-- 		<module>textimager-uima-transformers</module> -->
 		<module>textimager-uima-w2v</module>
 		<module>textimager-uima-biofid-flair</module>
-	</modules>
+        <module>textimager-uima-geonames-gazetteer</module>
+    </modules>
 </project>
