--- a/textimager-uima-util/pom.xml
+++ b/textimager-uima-util/pom.xml
@@ -53,6 +53,11 @@
             <version>5.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.texttechnologylab</groupId>
+            <artifactId>Utilities</artifactId>
+            <version>1.0.5</version>
+        </dependency>
 
     </dependencies>
 </project>
