--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -160,6 +160,11 @@
 					<artifactId>textimager-uima-text2scene</artifactId>
 					<version>${project.version}</version>
 				</dependency>
+				<dependency>
+					<groupId>org.hucompute.textimager.uima</groupId>
+					<artifactId>textimager-uima-gazetteer</artifactId>
+					<version>${project.version}</version>
+				</dependency>
 <!--				<dependency>-->
 <!--					<groupId>org.hucompute.textimager.uima</groupId>-->
 <!--					<artifactId>textimager-uima-flair-ner</artifactId>-->
