--- a/textimager-uima-base-annotators/pom.xml
+++ b/textimager-uima-base-annotators/pom.xml
@@ -17,11 +17,21 @@
 
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j -->
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-types</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-util</artifactId>
@@ -72,5 +82,6 @@
 			<artifactId>guava</artifactId>
 			<version>28.1-jre</version>
 		</dependency>
+
 	</dependencies>
 </project>
