--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 		<dkpro.core.version>1.12.0</dkpro.core.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<ttlab.typesystem.version>a375dff19191fb92609aeb81edb4318d243b95ec</ttlab.typesystem.version>
+		<ttlab.typesystem.version>324137afbe5a20eee41561ba973e3646fa350aaa</ttlab.typesystem.version>
+		<ttlab.utilities.version>1.0.7-uima-2.10.4</ttlab.utilities.version>
 	</properties>
 
 	<repositories>
@@ -86,38 +87,38 @@
 		<module>textimager-uima-io</module>
 		<module>textimager-uima-marmot</module>
 		<module>textimager-uima-wiki</module>
-		<module>textimager-uima-OpenerProject</module> 
-		<module>textimager-uima-talismane</module>
-		<module>textimager-uima-IXA</module>
-		<module>textimager-uima-uaic</module>
-		<module>textimager-uima-io-mediawiki</module>
+		<!-- <module>textimager-uima-OpenerProject</module> -->
+		<!-- <module>textimager-uima-talismane</module> -->
+		<!-- <module>textimager-uima-IXA</module> -->
+		<!-- <module>textimager-uima-uaic</module> -->
+		<!-- <module>textimager-uima-io-mediawiki</module> -->
 		<module>textimager-uima-spacy</module>
-		<module>textimager-uima-NeuralnetworkNER</module>
-		<module>textimager-uima-cltk</module> 
+		<!-- <module>textimager-uima-NeuralnetworkNER</module> -->
+		<!-- <module>textimager-uima-cltk</module> -->
 		<module>textimager-uima-fasttext</module>
 		<module>textimager-uima-tagme</module>
 		<module>textimager-uima-HUComputeNER</module>
 		<module>textimager-uima-disambiguation</module>
-		<module>textimager-uima-io-abbyy</module>
-		<module>textimager-uima-deploy</module>
+		<!--		 <module>textimager-uima-io-abbyy</module>-->
+		<!-- <module>textimager-uima-deploy</module> -->
 		<module>textimager-uima-heideltime</module>
-		<module>textimager-uima-agreement</module>
+		<!-- 		<module>textimager-uima-agreement</module> -->
 		<module>textimager-uima-biofid-gazetteer</module>
-		<module>textimager-uima-deep-eos</module>
+		<!-- 		<module>textimager-uima-deep-eos</module>-->
 		<module>textimager-uima-similarity</module>
 		<module>textimager-uima-database</module>
 		<module>textimager-uima-io-mediawiki</module>
 		<module>textimager-uima-util</module>
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
-		<module>textimager-uima-allennlp</module>
-		<module>textimager-uima-flair-ner</module>
+		<!-- 		<module>textimager-uima-allennlp</module> -->
+		<!--		<module>textimager-uima-flair-ner</module>-->
 		<module>textimager-uima-text2scene</module>
 		<module>textimager-uima-textblob</module>
- 		<module>textimager-uima-transformers</module> 
+		<!-- 		<module>textimager-uima-transformers</module> -->
 		<module>textimager-uima-w2v</module>
-    <module>textimager-uima-ta</module>
-    <module>textimager-uima-biofid-flair</module>
-    <module>textimager-uima-gazetteer</module>
+		<module>textimager-uima-biofid-flair</module>
+		<module>textimager-uima-gazetteer</module>
+		<module>textimager-uima-textscorer</module>
     </modules>
 </project>
