--- a/textimager-uima-IXA/pom.xml
+++ b/textimager-uima-IXA/pom.xml
@@ -2,11 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.hucompute.textimager.uima</groupId>
-    <artifactId>textimager-uima</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>org.hucompute.textimager.uima</groupId>
+        <artifactId>textimager-uima</artifactId>
+        <version>0.3.0</version>
+    </parent>
   <artifactId>textimager-uima-IXA</artifactId>
   <name>textimager-uima-IXA</name>
   <url>http://maven.apache.org</url>
