--- a/textimager-uima-NeuralnetworkNER/pom.xml
+++ b/textimager-uima-NeuralnetworkNER/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.hucompute.textimager.uima</groupId>
 		<artifactId>textimager-uima</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 	<artifactId>textimager-uima-NeuralnetworkNER</artifactId>
 
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-base-annotators</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
     <dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
