--- a/textimager-uima-biofid-gazetteer/pom.xml
+++ b/textimager-uima-biofid-gazetteer/pom.xml
@@ -27,6 +27,11 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
@@ -73,7 +78,7 @@
         <dependency>
             <groupId>com.github.texttechnologylab</groupId>
             <artifactId>Utilities</artifactId>
-            <version>1.0.5</version>
+            <version>${ttlab.utilities.version}</version>
         </dependency>
 
     </dependencies>
