--- a/textimager-uima-textscorer/pom.xml
+++ b/textimager-uima-textscorer/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 		    <groupId>com.github.texttechnologylab</groupId>
 		    <artifactId>UIMATypeSystem</artifactId>
-		    <version>324137afbe</version>
+		    <version>${ttlab.typesystem.version}</version>
 		</dependency>
 	</dependencies>
 </project>
