--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -472,6 +472,12 @@
 
 				<dependency>
 					<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+					<artifactId>de.tudarmstadt.ukp.dkpro.core.stanfordnlp-model-coref-de-default</artifactId>
+					<version>20181005.1</version>
+				</dependency>
+
+				<dependency>
+					<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 					<artifactId>de.tudarmstadt.ukp.dkpro.core.stanfordnlp-model-coref-en-default</artifactId>
 					<version>20181005.1</version>
 				</dependency>
