--- a/textimager-uima-gnd-gazetteer/pom.xml
+++ b/textimager-uima-gnd-gazetteer/pom.xml
@@ -25,18 +25,36 @@
     <dependencies>
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
-            <artifactId>textimager-uima-base-annotators</artifactId>
+            <artifactId>textimager-uima-gazetteer</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>com.github.texttechnologylab</groupId>
-            <artifactId>UIMATypeSystem</artifactId>
-            <version>${ttlab.typesystem.version}</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
-            <groupId>com.github.texttechnologylab</groupId>
-            <artifactId>Utilities</artifactId>
-            <version>${ttlab.utilities.version}</version>
+            <groupId>log4j</groupId>
+            <artifactId>apache-log4j-extras</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-languagetool-asl</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
