--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<dkpro.core.version>1.12.0</dkpro.core.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<ttlab.typesystem.version>1.8.9.2</ttlab.typesystem.version>
+		<ttlab.typesystem.version>1.8.9.4</ttlab.typesystem.version>
 		<ttlab.utilities.version>1.1.1-uima-2.10.4</ttlab.utilities.version>
 	</properties>
 
@@ -106,7 +106,7 @@
 <!--		<module>textimager-uima-deep-eos</module>-->
 		<module>textimager-uima-similarity</module>
 		<module>textimager-uima-database</module>
-<!--		<module>textimager-uima-io-mediawiki</module>-->
+		<module>textimager-uima-io-mediawiki</module>
 		<module>textimager-uima-util</module>
 		<module>textimager-uima-stanza</module>
 		<module>textimager-uima-io-embeddings</module>
