--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,6 @@
 		<module>textimager-uima-geonames-gazetteer</module>
 		<module>textimager-uima-gnd-gazetteer</module>
 		<module>textimager-uima-biofid-general-gazetteer</module>
+		<module>textimager-uima-steps</module>
     </modules>
 </project>
