--- a/textimager-uima-fasttext/pom.xml
+++ b/textimager-uima-fasttext/pom.xml
@@ -24,5 +24,15 @@
 			<version>1.12.0</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-io-xmi-asl</artifactId>
+		</dependency>
 	</dependencies>
 </project>
