--- a/textimager-uima-spacy/pom.xml
+++ b/textimager-uima-spacy/pom.xml
@@ -18,5 +18,10 @@
 			<artifactId>textimager-uima-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
