--- a/textimager-uima-juilie/pom.xml
+++ b/textimager-uima-juilie/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>UIMADatabaseInterface</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>de.julielab</groupId>
+            <artifactId>jcore-types</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.dkpro.core</groupId>
